[workspace]

members = [
    "net-timescale",
    "net-timescale-api",
]

[workspace.dependencies]
net-proto-api = { git = "ssh://github.com/net-stalker/net-core", branch = "develop" }
net-transport = { git = "ssh://github.com/net-stalker/net-core", branch = "develop" }
net-file = { git = "ssh://github.com/net-stalker/net-core", branch = "develop" }
net-config = { git = "ssh://github.com/net-stalker/net-config", branch = "develop" }

log = "0.4.17"
log4rs = "1.2.0"
threadpool = "1.8.1"

directories = "5.0.0"
config = "0.13.3"
serde = { version = "1.0.156", features = ["derive"] }
toml = "0.7.3"


[net]
git-fetch-with-cli = true