[workspace]

members = [
    "net-timescale",
    "net-timescale-api",
]

[workspace.dependencies]
net-proto-api = { version = "0.1.0", registry = "net-registry" }
net-transport = { version = "0.1.0", registry = "net-registry" }
net-file = { version = "0.1.0", registry = "net-registry" }
net-config = { version = "0.1.0", registry = "net-registry" }
net-timescale-api = { version = "0.1.1", registry = "net-registry" }

log = "0.4.17"
log4rs = "1.2.0"
threadpool = "1.8.1"

directories = "5.0.0"
config = "0.13.3"
serde = { version = "1.0.156", features = ["derive"] }
toml = "0.7.3"