[package]
name = "component-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
net-file = "0.1.3"
serde_json = "1.0.117"
sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono"] }
subprocess = "0.2.9"
tokio = { version = "1.28.1", features = ["full"] }
