# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "net-agent"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/netmonitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[package.metadata.bundle]
name = "netagent"
identifier = "io.netagent"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
resources = ["assets", "images/**/*.png", "debian"]
copyright = "Copyright (c) NetStalker 2023. All rights reserved."
category = "Developer Tool"
short_description = "Capture packets and redirect them to the cloud for the feature analyze."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
deb_depends = ["libpcap-dev", "libzmq3-dev"]
# osx_frameworks = ["libpcap"]

[dependencies]
net-core = { path = "../net-core" }
net-config = { path = "../net-config" }
net-proto-api = { path = "../net-proto-api" }

log = { workspace = true }
env_logger = { workspace = true }
threadpool = { workspace = true }

pcap = "1.0.0"
derivative = "2.2.0"

directories = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
