# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "net-commons"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[dependencies]
pcap = "0.10.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.85"
bincode = "1.3.3"
derivative = "2.2.0"
directories = "4.0.1"
hocon = "0.9.0"

[dev-dependencies]
mockall = "0.11.2"