[package]
name = "net-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
clap = "4.1.7"
ed25519-dalek = "1.0.1"
futures = "0.3.26"
russh = "0.36.1"
russh-keys = "0.24.1"
tokio = "1.25.0"
env_logger = "0.10.0"
log = "0.4.17"