# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "net-core"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/net-monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[dependencies]
net-config = { path = "../net-config" }

log = { workspace = true }

pcap = "1.0.0"

serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
# https://jsonpath.com/
jsonpath-rust = "0.2.1"

bincode = "1.3.3"
derivative = "2.2.0"
subprocess = "0.2.9"
zmq = "0.10.0"
nng = "1.0.1"
polling = "2.5.2"
unescape = "0.1.0"
chrono = "0.4.23"
walkdir = "2.3.2"
capnpc = "0.17.0"
capnp = "0.17.0"

[dev-dependencies]
mockall = "0.11.2"

[build-dependencies.capnpc]
capnpc = "0.16.4"