[package]
name = "net-hub"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[dependencies]
net-commons = { path = "../net-commons" }

zmq = "0.9.2"
simple-websockets = "0.1.4"

[dev-dependencies]
mockall = "0.11.2"
