[package]
name = "net-hub"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[dependencies]
net-core = { path = "../net-core" }
net-timescale-api = { path = "../net-timescale-api" }

serde_json = "1.0.91"
simple-websockets = "0.1.4"
log = "0.4.17"
env_logger = "0.10.0"
threadpool = "1.8.1"
