[package]
name = "net-hub"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[dependencies]
net-core = { path = "../net-core" }
net-config = { path = "../net-config" }
net-timescale-api = { path = "../net-timescale-api" }

log = { workspace = true }
env_logger = { workspace = true }
threadpool = { workspace = true }

directories = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

simple-websockets = "0.1.4"
