[package]
name = "net-inserter-async"
version = "0.1.0"
edition = "2021"

[dependencies]

net-core-api = "0.2.0"
net-transport = { version = "0.1.0", features = ["quinn"] }
net-file = "0.1.1"
net-agent-api = "0.1.3"
net-inserter-api = "0.1.3"
net-config = "0.1.0"
net-token-verifier = "0.1.0"

log.workspace = true
log4rs.workspace = true
threadpool.workspace = true
directories.workspace = true

config.workspace = true
serde.workspace = true
toml.workspace = true

chrono = { version = "0.4.23", feature = ["clock"] }
serde_json = "1.0.91"
serde_yaml = "0.9.21" # uses to parse log4rs config
sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.28.1", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
mockall = "0.11.2"

[features]
integration = []
