[package]
name = "net-inserter"
version = "0.1.0"
edition = "2021"

[dependencies]
net-core-api = "0.5.0"
net-transport = { version = "0.1.1", features = ["quinn"] }
net-file = "0.1.1"
net-inserter-api = "0.2.0"
net-config = "0.1.1"
net-component = "0.1.0"

log.workspace = true
log4rs.workspace = true
threadpool.workspace = true
directories.workspace = true

config.workspace = true
serde.workspace = true
toml.workspace = true

chrono = { version = "0.4.23", feature = ["clock"] }
serde_json = { version = "1.0.91", features = ["std"] }
serde_yaml = "0.9.21" # uses to parse log4rs config
sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.28.1", features = ["full"] }
openssl = { version = "0.10.64", features = ["vendored"] }
async-trait = "0.1.80"
thiserror = "1.0.58"
component-core = { path = "../component-core" }
uuid = {version = "1.8.0", features = ["v7", "fast-rng",]} # Version 7 UUIDs using a Unix timestamp.

[dev-dependencies]
mockall = "0.11.2"

[features]
integration = []
