# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "net-monitor"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[package.metadata.bundle]
name = "netmonitor"
identifier = "io.netmonitor"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
resources = ["assets", "images/**/*.png", "debian"]
copyright = "Copyright (c) Netstalker 2022. All rights reserved."
category = "Developer Tool"
short_description = "Capture packets and redirect them to the cloud for the feature analyze."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
deb_depends = ["libpcap-dev", "libzmq3-dev"]
# osx_frameworks = ["libpcap"]

[dependencies]
net-commons = { path = "../net-core" }

rand = "0.8.5"
zmq = "0.9.2"
derivative = "2.2.0"
directories = "4.0.1"

[dev-dependencies]
mockall = "0.11.2"