[package]
name = "net-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net-core-api = "0.2.0"
# net-reporter-api = "0.3.1"
net-reporter-api = { git = "https://github.com/net-stalker/net-api", branch = "NS-203/dto-for-request-methods-dist-chart" }
net-token-verifier = "0.1.0"
net-transport = { version = "0.1.0", features = ["quinn"] }
net-file = { version = "0.1.0", registry = "net-registry" }
net-config = { version = "0.1.0", registry = "net-registry" }

sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono"] }

async-trait = "0.1.74"
serde_yaml = "0.9.21" # uses to parse log4rs config

tokio = { version = "1.28.1", features = ["full"] }

log.workspace = true
log4rs.workspace = true
threadpool.workspace = true

config.workspace = true
serde.workspace = true
toml.workspace = true
