[package]
name = "net-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net-reporter-api = "0.8.4"
net-core-api = "0.5.2"
net-component = "0.1.0"
net-transport = { version = "0.1.1", features = ["quinn"] }
net-file = "0.1.1"
net-config = "0.1.1"
openssl = { version = "0.10.64", features = ["vendored"] }
sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono"] }
async-trait = "0.1.74"
serde_yaml = "0.9.21" # uses to parse log4rs config
tokio = { version = "1.28.1", features = ["full"] }
component-core = { path = "../component-core" }

log.workspace = true
log4rs.workspace = true
threadpool.workspace = true
directories.workspace = true

config.workspace = true
serde.workspace = true
toml.workspace = true
serde_json = "1.0.117"
