[package]
name = "net-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
net-core = { path = "../net-core" }
net-agent = { path = "../net-agent" }
net-hub = { path = "../net-hub" }
net-timescale = { path = "../net-timescale" }
net-translator = { path = "../net-translator" }

log = { workspace = true }
env_logger = { workspace = true }
threadpool = { workspace = true }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
postgres = { version = "0.19.4", features = ["with-chrono-0_4", "with-serde_json-1"] }
