[package]
name = "net-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
net-core = { path = "../net-core" }
net-agent = { path = "../net-agent" }
net-hub = { path = "../net-hub" }
net-timescale = { path = "../net-timescale" }
net-translator = { path = "../net-translator" }

log = { workspace = true }
log4rs = { workspace = true }
threadpool = { workspace = true }
serde_yaml = "0.9.21" # uses to parse log4rs config
async-std = { version = "1.12.0", features = ["attributes"] }
