[package]
name = "net-timescale-api"
version = "0.1.0"
edition = "2021"


[dependencies]
net-proto-api = { path = "../net-proto-api" }

capnp = "0.16.1"
capnpc = "0.16.1"

ion-rs = "0.18.1"
ion-schema = "0.7.0"

[build-dependencies]
net-core = { path = "../net-core" }

[build-dependencies.capnpc]
capnpc = "0.17.0"

[features]
capnp-endec = []
ion-endec = []
ion-schema-validation = []

default = ["ion-endec"]