[package]
name = "net-timescale"
version = "0.1.0"
edition = "2021"

[dependencies]
net-core = { path = "../net-core" }
net-config = { path = "../net-config" }
net-proto-api = { path = "../net-proto-api" }
net-timescale-api = { path = "../net-timescale-api" }


log = { workspace = true }
log4rs = { workspace = true }
threadpool = { workspace = true }

config = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }


chrono = "0.4.23"
serde_json = "1.0.91"
serde_yaml = "0.9.21" # uses to parse log4rs config
capnp = "0.16.1"
capnpc = "0.16.3"
nng = "1.0.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "serde_json", "chrono"] }
zmq = "0.10.0"

[dev-dependencies]
mockall = "0.11.2"

[features]
integration = []
