[package]
name = "net-timescale"
version = "0.1.0"
edition = "2021"

[dependencies]

net-proto-api = { version = "=0.1.1-da85a0a", registry = "net-registry" }
net-transport = { version = "=0.1.2-6538ee7", registry = "net-registry" }
net-file = { version = "0.1.0", registry = "net-registry" }
net-config = { version = "0.1.0", registry = "net-registry" }
net-timescale-api = { version = "=0.1.2-0de1605", registry = "net-registry" }


log.workspace = true
log4rs.workspace = true
threadpool.workspace = true

config.workspace = true
serde.workspace = true
toml.workspace = true


chrono = { version = "0.4.23", feature = ["clock"] }
serde_json = "1.0.91"
serde_yaml = "0.9.21" # uses to parse log4rs config
capnp = "0.16.1"
capnpc = "0.16.3"
zmq = "0.10.0"
sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono"] }
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
async-channel = "1.9.0"
ion-rs = "0.18.1"
async-trait = "0.1.74"

[dev-dependencies]
mockall = "0.11.2"

[features]
integration = []
ion-text = []
ion-binary = []

default = ["ion-text"]
