[package]
name = "net-translator"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[dependencies]
net-core = { path = "../net-core" }
net-timescale-api = { path = "../net-timescale-api" }

log = { workspace = true }
env_logger = { workspace = true }
threadpool = { workspace = true }

threadpool = "1.8.1"
capnp = "0.16.1"
capnpc = "0.16.3"
#zmq = "0.9.2"