[package]
name = "net-translator"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/net-stalker/monitor"
#links = "libpcap-dev libzmq3-dev"
authors = ["Dmytro Shcherbatiuk <dmytro.shcherbatiuk@netstalker.io>"]
readme = "README.md"
#homepage = "https://serde.rs/"
#license = "MIT OR Apache-2.0"
#license-file = "LICENSE.txt"

[dependencies]
net-core = { path = "../net-core" }
net-timescale-api = { path = "../net-timescale-api" }
net-config = { path = "../net-config" }
net-proto-api = { path = "../net-proto-api" }

log = { workspace = true }
log4rs = { workspace = true }
threadpool = { workspace = true }
directories = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

capnp = "0.16.1"
capnpc = "0.16.3"
serde_yaml = "0.9.21" # uses to parse log4rs config
