[package]
name = "net-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log.workspace = true
log4rs.workspace = true
threadpool.workspace = true
directories.workspace = true

config.workspace = true
serde.workspace = true
toml.workspace = true

net-core-api = "0.5.0"
net-updater-api = "0.4.1"
net-config = "0.1.1"
net-file = "0.1.1"
net-transport = { version = "0.1.1", features = ["quinn"] }
net-component = "0.1.0"

component-core = { path = "../component-core" }

async-trait = "0.1.80"
serde_json = "1.0.91"
serde_yaml = "0.9.21" # uses to parse log4rs config
sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.28.1", features = ["full"] }
thiserror = "1.0.60"
